--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <title>Document</title>
   </head>
 
@@ -12,6 +14,7 @@
     <main>
       <form onsubmit="app.apodController.search(event)">
         <input type="date" name="date" />
+        <div id="error" class="alert alert-danger d-none"></div>
         <button type="submit">Go</button>
         <button type="reset">Cancel</button>
       </form>
